assets/css/style.css
/* ... */
.team{
    text-align: center;
    border-radius: 25px;
    font-family:Open Sans;
    margin-left:2%;
    margin-right:2%;
    margin-top: 3%;
    margin-bottom: 18%;
  }

 .team .inner{
    width:100%;
    text-align:center;
    padding: 7px;
  }
  .team .inner img{
    width:50%;
    border-radius:50%;
    text-align:center;
  }
  .names{
    font-family: Open Sans;
    font-style: normal;
    font-weight: bold;
    font-size: 25px;
    color: rgba(14,0,170,1);
  }

  .core{
    font-family: Open Sans;
    font-style: normal;
    font-weight: normal;
    font-size: 16px;
    color: rgba(230,43,30,1);
  }

/*Team Page styling ends*/


















/*Speaker Page styling starts*/
.speakerblue{
  margin-right: 10vw;
  margin-top: -7vh;
}

.speakerred{
  position: absolute;
  margin-left: 10vw;
  margin-top: -15vh;
}

.speakersmallred{
  position: absolute;
  margin-left: 10vw;
}
.speakerblue2{
  position: absolute;
  margin-left: 10vw;
  margin-top: -6vh;
}

.speakerred2{
  position: absolute;
  margin-left: 80%;
  margin-top: -5vh;
}

.speakerred3{
  position: absolute;
  margin-left: 10%;
  margin-top: -5vh;
}


.speakerblue3{
  position: absolute;
  margin-left: 80%;
  margin-top: 5vh;
}


  .speak{
      text-align: center;
      font-family:Open Sans;
      margin-left:3%;
      margin-right:3%;
      margin-top: 3%;
      margin-bottom: 3%;
    }

    .speak .inner{
      width:100%;
      text-align:center;
      padding: 7px;
    }
    .speak .inner img{
      width: 200px;
      height: 200px;
      border-radius: 100px;
      /* width:50%;
      border-radius:50%; */
      text-align:center;
    }
    .test .card{
      border: none;
    }

    .speakers{
    font-family: Open Sans;
    font-style: normal;
    font-weight: bold;
    font-size: 45px;
    color: rgba(51,51,51,1);
    }
}
}
}
/**/
    .ID2019{
        font-family: Open Sans;
        font-style: normal;
        font-weight: bold;
        font-size: 30px;
        color: rgba(14,0,170,1);
    }

 /*Speaker page styling ends*/















@media only screen and (max-width: 900px){
  .indexwhite2{
    display: none;
  }
  .indexred2{
    display: none;
  }
}



@media only screen and (min-width: 600px){
  .We_are_looking_for_diverse_exp {
        width: 63%;
        margin-left: 17vw;
      }
      .evens{
        display: none;
      }
      .aboutsmallred{
        display: none;
      }
      .indexsmallred{
        display: none;
      }
      .speakersmallred{
        display: none;
      }
}



/*Media queries starts here*/
  @media only screen and (max-width: 600px) {
    .head{
      font-size: 15px;
    }
    .speakerred{
      display: none;
    }
    .aboutred{
      display: none;
    }
    .evens{
      margin-top: -4vh;
    }
    .indexred{
      display: none;
    }
    .indexwhite{
      display:none;
    }

    .evenb{
      display: none;
    }
    .We_are_looking_for_diverse_exp{
      width: 80%;
      font-size: 1em;
      /*margin-left: 10vw;*/
    }

    .teamre{
      margin-left:73vw; 
      margin-top: 200vh;
    }
    .teambl{
      margin-top: 400vh;
    }
    .teamr{
      display: none;
    }
    .evenr{
      /*height: 50%;
      width: 50%;*/
      display: none;
    }

    .TEDxIITHyderabad_connects_indi{
      font-size: 1.2em;
    }
    .Nominate_yourself_for_the_spea{
      font-size: 2em;
    }
    .partner{
      font-size: 2em;
    }

    .Nominate_speaker{
      font-size: 1.2em;
    }

    .Know_more{
      font-size: 1.2em;
    }

    /*partner page*/
    .Why_partner_with_us {
    font-size: 2em;
      }
      .As_a_TEDx_partner_you_have{
        font-size: 2em;
      }
      .Partnership_with_an_event_of_g{
        font-size: 18px;
      }

      /*Events page*/
      .To_know_what_life_is_worth__yo{
        font-size: 1.8em;
      }
      .Are_you_ready_to_take_risks_in{
        font-size: 1.8em;
      }
      .Lets_listen_to_people_who_have{
        font-size: 1.2em;
      }


      .About_TEDx_x__independently_or{
        font-size: 1em;
        margin-left: 13vw;
      }

      .abted{
        font-size: 3em;
        margin-left: 13vw;
      }
      .About_TED{
        font-size: 3em;
      }

      .TEDxIITHyderabad_is_a_team_of_{
        font-size: 0.6em;
      }

      .TEDxIITHyderabad_is_a_team_of_{
        width: 85%;
        top:45vw;
      }
      .TEDx_IITH_white{
        width: 55vw ;
        height: 35vh;
      }
      .footer_art{
        height: 50vh;
        margin-bottom: -24vh;
      }

  }




















@media (max-width: 768px) {
    .carousel-inner1 .carousel-item1 > div {
        display: none;
    }
    .carousel-inner1 .carousel-item1 > div:first-child {
        display: block;
    }
}

.carousel-inner1 .carousel-item.active,
.carousel-inner1 .carousel-item-next,
.carousel-inner1 .carousel-item-prev {
    display: flex;
}

/* display 3 */
@media (min-width: 768px) {
    
    .carousel-inner1 .carousel-item-right.active,
    .carousel-inner1 .carousel-item-next {
      transform: translateX(33.333%);
    }
    
    .carousel-inner1 .carousel-item-left.active, 
    .carousel-inner1 .carousel-item-prev {
      transform: translateX(-33.333%);
    }
}

.carousel-inner1 .carousel-item-right,
.carousel-inner1 .carousel-item-left{ 
  transform: translateX(0);
}





/*.card:hover {
  transform:scale(1.1);
}*/
/*

.card{
    border-radius: 4px;
    background: #fff;
    box-shadow: 0 6px 10px rgba(0,0,0,.08), 0 0 6px rgba(0,0,0,.05);
      transition: .3s transform cubic-bezier(.155,1.105,.295,1.12),.3s box-shadow,.3s -webkit-transform cubic-bezier(.155,1.105,.295,1.12);
  padding: 14px 80px 18px 36px;
  cursor: pointer;
}*/

.card:hover{
     transform: scale(1.05);
  box-shadow: 0 10px 20px rgba(0,0,0,.12), 0 4px 8px rgba(0,0,0,.06);
}

